# BelaUtils

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  build.ps1
.github/workflows/: ci.yml
BelaUtils/: caelum.pos.json  kisasum-ui.pos.json
include/: baulkenv.hpp  belautils.hpp  belautilsversion.h  belautilsversion.h.cmake  hazel.hpp  placement.hpp  vfsenv.hpp
include/baulk/: hash.hpp  misc.hpp
include/baulk/net/: client.hpp  types.hpp
include/details/: hazeltypes.hpp
include/hazel/: elf.hpp  macho.hpp  pe.hpp
lib/: CMakeLists.txt
lib/hashlib/: CMakeLists.txt  KangarooTwelve.hpp  blake2.hpp  hashlib.cc  k12.hpp  sumizer.hpp
lib/hazel/: CMakeLists.txt  archive.cc  binexeobj.cc  docs.cc  elf.cc  elf.h  font.cc  git.cc  hazel.cc  hazelinc.hpp  hwzip.txt  image.cc  macho.cc  media.cc  mime.cc  pecoff.cc  reparsepoint.hpp  resolve.cc  resolve.hpp  shl.cc  text.cc  zip.cc  zip.hpp
lib/hazel/elf/: file.cc
lib/hazel/hwzip/: Makefile  README  benchmarks.c  bits.h  bits_test.c  bitstream.h  bitstream_test.c  crc32.c  crc32.h  crc32_test.c  deflate.c  deflate.h  deflate_bench.c  deflate_fuzzer.c  deflate_test.c  generate_tables.c  hamlet.h  hamlet.txt  huffman.c  huffman.h  huffman_bench.c  huffman_test.c  hwzip.c  hwzip_test.sh  inflate_bench.c  inflate_fuzzer.c  inflate_test.c  lz77.c  lz77.h  lz77_bench.c  lz77_test.c  tables.h  test_utils.c  test_utils.h  tests.c  version.h  zip.c  zip.h  zip_fuzzer.c  zip_test.c  (+3 more)
lib/hazel/pe/: file.cc
lib/misc/: CMakeLists.txt  chardet.cc  hash.cc
lib/net/: CMakeLists.txt  client.cc  utils.cc
lib/winutils/: CMakeLists.txt  winui.hpp  winutils.cc
script/: bona-image-rename.bat  bona-image-rename.ps1
test/: replace.cc
tools/: CMakeLists.txt
tools/belaview/: CMakeLists.txt  belaview.cc  belaview.elf.cc  belaview.hpp  belaview.macho.cc  belaview.manifest  belaview.pe.cc  belaview.rc  belaview.zip.cc
tools/bona/: CMakeLists.txt  bona.cc  bona.chardet.cc  bona.elf.cc  bona.hpp  bona.macho.cc  bona.manifest  bona.pe.cc  bona.rc  bona.xml.cc  bona.zip.cc  resource.h  writer.hpp
tools/caelum/: CMakeLists.txt  README.md  ReadMe.md  caelum.cc  caelum.hpp  caelum.manifest  caelum.rc  pe.hpp  pecoff.cc  resolvelink.cc  resource.h  shl.hpp  window.cc  window.hpp
tools/hastyhex/: CMakeLists.txt  README.md  hastyhex.cc  hastyhex.manifest  hastyhex.rc  resource.h
tools/hazel/: CMakeLists.txt  driver.cc  hazel.manifest  hazel.rc  jsonwriter.cc  resource.h
tools/kisasum/: CMakeLists.txt  fileutils.hpp  kisasum-ui.cc  kisasum.cc  progressbar.hpp
tools/kisasum/cli/: fileutils.hpp  indicators.cc  indicators.hpp  kisasum.cc  kisasum.manifest  kisasum.rc  progressbar.hpp
tools/kisasum/ui/: ReadMe.md  TODO  kisasum-ui.cc  kisasum.cc  kisasum.hpp  kisasum.json  kisasum.manifest  kisasum.rc  kisasumutils.cc  kisasumutils.hpp  mdl.txt  resource.h  ui.cc  ui.hpp
tools/krycekium/: CMakeLists.txt  executor.cc  executor.hpp  km-cli.cc  kmutils.cc  kmutils.hpp  krycekium.cc  krycekium.hpp  krycekium.manifest  krycekium.rc  resource.h  window.cc  window.hpp
tools/sshsecret/: main.cc  xmss.cc
tools/wind/: CMakeLists.txt  indicators.cc  net.cc  net.hpp  wind.cc  wind.hpp  wind.manifest  wind.rc
tools/xamldesktop/: CMakeLists.txt  xamldesktop.cc  xamldesktop.hpp  xamldesktop.manifest
